# DiscreteMeshOptimization

./: .gitignore  CMakeLists.txt  DiscreteMeshOptimization.sln  FIXME  README.md
DMO Smoothing/: .gitignore  DMO Smoothing.vcxproj  DMOConfig.h  DiscreteMeshOptimization.cpp  DiscreteMeshOptimization.h  Main.cpp  OpenMeshConfig.h  QualityCriteria.h  Stopwatch.h  actual_main.cpp  gui.cpp  gui.h  kernel.cu
Meshes/: .gitignore
src/: DMOConfig.h  DiscreteMeshOptimization.cpp  Main.cpp  QualityCriteria.h  Stopwatch.cpp  kernel.cu
